# Advent-of-Code-2024

./: .gitignore  Makefile  README.md  debug-test.sh  pyproject.toml
aoc/: __main__.py
aoc/common/: util.py
aoc/day_01/: core.py  seed.py
aoc/day_02/: core.py  seed.py
aoc/day_XX/: core.py  seed.py
tests/: test_day_01.py  test_day_02.py  test_day_XX.py
